CIS-152   Change the use of Crowd to retrieve groups